titlle link photo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <!-- Bootstrap CSS -->
     
-    <link rel="icon" type="image/x-icon" href="/public/menu1.jpg" >
+    <link rel="icon" type="image/x-icon" href="chawal.jpeg" >
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
