--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
      rel="stylesheet"
      />
-    <link rel="stylesheet" href="/public/main.css">
+    <link rel="stylesheet" href="/main.css">
     <title>FoodPanda</title>
   </head>
   <body>
