--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
      rel="stylesheet"
      />
-    <link rel="stylesheet" href="/main.css">
-    <title>FoodPanda</title>
+    <link rel="stylesheet" href="main.css">
+    <title>chawa</title>
   </head>
   <body>
     <header>
@@ -40,13 +40,13 @@
           <ul class="navbar-nav mr-auto">
           
             <!-- <li class="nav-item active">
-              <a class="nav-link navbar-brand" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link navbar-brand" href="/chawaGujrat/index.html">Home <span class="sr-only">(current)</span></a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link navbar-brand" href="Menu.html">Our Menu</a>
+              <a class="nav-link navbar-brand" href="/chawaGujrat/Menu.html">Our Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-brand" href="Contact.html">Contact Us</a>
+              <a class="nav-link navbar-brand" href="/chawaGujrat/Contact.html">Contact Us</a>
             </li>
           </ul>
 
@@ -60,14 +60,14 @@
       <div class="container-fluid belowNav" style="background-color:#fff8f5; ">
         <div class="row d-flex justify-content-center  py-5" style="height:100%"  >
             <div class="col-4 d-flex justify-content-center  belowNavContent ">
-              <img src="/chawaaGujrat/icons8-visit-48.png" alt="" style="border-radius: 7px;" srcset="">
+              <img src="icons8-visit-48.png" alt="" style="border-radius: 7px;" srcset="">
               <div class="content ml-3 belowNavWords">
               <h2 class="featurette-heading  ">Locate Us </h2>
               <p class="lead ">Somehwere alone Peacefull on Earth</p>
            </div>
        </div>  
             <div class="col-4 d-flex justify-content-center belowNavContent">
-              <img src="/chawaaGujrat/icons8-time-machine-48.png" alt="" style="border-radius: 7px;"  srcset="">
+              <img src="icons8-time-machine-48.png" alt="" style="border-radius: 7px;"  srcset="">
             <div class="content ml-3">
               <h2 class="featurette-heading belowNavWords ">Opening Hours </h2>
           <p class="lead ">Mon To Fri 9:00 AM - 9:00 PM </p>
@@ -80,7 +80,7 @@
           <div id="carouselExampleFade" class="carousel-control slide carousel-fade " data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/public/resturant2.jpg" class="d-block w-100 rounded" style="height: 90vh;">
+                <img src="/resturant2.jpg" class="d-block w-100 rounded" style="height: 90vh;">
                 <!-- <div class="carousel-caption ">
                   <h1 style="font-weight: 700; color: #eab521; font-size: 5rem;">Welcome To The Chawaa </h1> 
                  
@@ -101,14 +101,14 @@
         <!-- STARTERS -->
         <div class="row my-lg-5 menu4animation"> 
         <div class="container col-6 col-md-8 col-lg-5 d-flex justify-content-center align-items-center">
-          <img src="/public/sideimg.jpg" class="w-75 h-75 mx-auto  px-auto" alt="" srcset="">
+          <img src="sideimg.jpg" class="w-75 h-75 mx-auto  px-auto" alt="" srcset="">
          </div>
          <div class="container menu4animation2 col-11 col-md-9 col-sm-9 col-lg-6 ">
         <div class="d-flex align-item-center justify-content-center flex-direction-column mb-3 "  >
           <h2 class="featurette-heading  borderSetting py-2 mt-3 " >Starters</h2>
         </div>
         <div class="menu-item py-lg-4 ">
-          <img src="/public/menu1.jpg" alt="">
+          <img src="menu1.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Raw Scallops from Erquy </h3>
             <p>Shuck the scallop to that used for oysters &nbsp;</p>
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="menu-item py-lg-4 ">
-          <img src="/public/menu2.jpg" alt="">
+          <img src="menu2.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Tomato Bruschetta</h3>
             <p>Bread, olive oil, garlic, black pepper  &nbsp; </p>
@@ -134,7 +134,7 @@
           </div>
         </div>
         <div class="menu-item py-lg-4">
-          <img src="/public/menu3.jpg" alt="">
+          <img src="menu3.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Spring Roll</h3>
             <p>Add oil to a hot pan spring onion whites &nbsp; </p>
