--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <!-- Bootstrap CSS -->
     
-    <link rel="icon" type="image/x-icon" href="chawal.jpeg" >
+    <link rel="icon" type="image/x-icon" href="./images/chawal.jpeg" >
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
     href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
      rel="stylesheet"
      />
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
     <title>chawa</title>
   </head>
   <body>
