--- a/Menu.html
+++ b/Menu.html
@@ -7,9 +7,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="/public/menu1.jpg" >
+    <link rel="icon" type="image/x-icon" href="./images/menu1.jpg" >
     <title>Our Menu</title>
-    <link rel="stylesheet" href="/public/main.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <nav aria-label="breadcrumb " >
@@ -19,7 +19,7 @@
             Chawaa
           </h5>
         </li>
-        <li class="breadcrumb-item" style="font-size: large;"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item" style="font-size: large;"><a href="/chawaGujrat/">Home</a></li>
         <li class="breadcrumb-item active"style="font-size: large;" aria-current="page">Menu</li>
       </ol>
     </nav>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="menu-item py-lg-4 ">
-          <img src="/public/menu1.jpg" alt="">
+          <img src="./images/menu1.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Raw Scallops from Erquy </h3>
             <p>Shuck the scallop to that used for oysters &nbsp;</p>
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="menu-item py-lg-4">
-          <img src="/public/menu2.jpg" alt="">
+          <img src="./images/menu2.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Tomato Bruschetta</h3>
             <p>Bread, olive oil, garlic, black pepper  &nbsp; </p>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="menu-item py-lg-4">
-          <img src="/public/menu3.jpg" alt="">
+          <img src="./images/menu3.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Spring Roll</h3>
             <p>Add oil to a hot pan spring onion whites &nbsp; </p>
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="menu-item py-lg-4">
-          <img src="/public/menu4.jpg" alt="">
+          <img src="./images/menu4.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">French Onion Soup</h3>
             <p>Wheat flour, apple cider vinegar, bread &nbsp; </p>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="menu-item py-lg-4">
-          <img src="/public/main1.jpg" alt="">
+          <img src="./images/main1.jpg" alt="">
           <div>
             <h3 class="featurette-heading "> Salmon with Dill Sauce</h3>
             <p>Brown sugar, salmon fillet, Dijon mustard&nbsp; </p>
@@ -103,7 +103,7 @@
           </div>
         </div>  
         <div class="menu-item py-lg-4">
-          <img src="/public/main2.jpg" alt="">
+          <img src="./images/main2.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Roast Beef with Vegetable</h3>
             <p>Green beans, rib eye, olive oil, beef &nbsp; </p>
@@ -116,7 +116,7 @@
           </div>
         </div>  
         <div class="menu-item py-lg-4">
-          <img src="/public/main3.jpg" alt="">
+          <img src="./images/main3.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Marrkesh Vegetetarian Curruy</h3>
             <p>Sweet potato, eggplant, garbanzo bean &nbsp; </p>
@@ -129,7 +129,7 @@
           </div>
         </div> 
         <div class="menu-item py-lg-4">
-          <img src="/public/main4.jpg" alt="">
+          <img src="./images/main4.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Grilled Salmon with Dill Sauce</h3>
             <p>Brown sugar, salmon fillet, Dijon mustard &nbsp; </p>
@@ -146,7 +146,7 @@
           
           <div class=" col col-lg-3 col-auto mx-auto my-3" style="width: 18rem;">
             <div class="card">
-                 <img src="/java script/photos/chawal.jpeg" class="card-img-top" alt="...">
+                 <img src="./images/chawal.jpeg" class="card-img-top" alt="...">
             <div class="card-body h-60">
               <h3  class="card-title">Card title</h3>
               <p class="card-text" style="font-size: medium;">Some quick example text to build on the card title and make up the bulk of the card's content.  </p>
@@ -156,7 +156,7 @@
           </div>
           <div class="col col-lg-3 col-auto mx-auto my-3" style="width: 18rem;">
             <div class="card">
-            <img src="/java script/photos/paye.jpeg" class="card-img-top " style="height: 100%;" alt="...">
+            <img src="./images/paye.jpeg" class="card-img-top " style="height: 100%;" alt="...">
             <div class="card-body">
               <h3  class="card-title">Card title</h3>
               <p class="card-text" style="font-size: medium;">Some quick example text to build on the card title and make up the bulk of the card's content.  </p>
@@ -165,7 +165,7 @@
           </div>
           <div class="col col-lg-3 col-auto mx-auto my-3" style="width: 18rem;">
             <div class="card">
-            <img src="/java script/photos/paye.jpeg" class="card-img-top " style="height: 100%;" alt="...">
+            <img src="./images/paye.jpeg" class="card-img-top " style="height: 100%;" alt="...">
             <div class="card-body">
               <h3  class="card-title">Card title</h3>
               <p class="card-text" style="font-size: medium;">Some quick example text to build on the card title and make up the bulk of the card's content.  </p>
@@ -174,7 +174,7 @@
           </div>
           <div class="col col-lg-3 col-auto mx-auto my-3" style="width: 18rem;">
             <div class="card">
-            <img src="/java script/photos/paye.jpeg" class="card-img-top " style="height: 100%;" alt="...">
+            <img src="./images/paye.jpeg" class="card-img-top " style="height: 100%;" alt="...">
             <div class="card-body">
               <h3  class="card-title">Card title</h3>
               <p class="card-text" style="font-size: medium;">Some quick example text to build on the card title and make up the bulk of the card's content.  </p>
@@ -187,7 +187,7 @@
         </div>
 
         <div class="menu-item py-lg-4 ">
-          <img src="/public/d1.jpg" alt="">
+          <img src="./images/d1.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Apple Pie with Cream</h3>
             <p>Whipping cream, egg white, cinnamon &nbsp; </p>
@@ -200,7 +200,7 @@
           </div>
         </div>  
       <div class="menu-item py-lg-4 ">
-          <img src="/public/d2.jpg" alt="">
+          <img src="./images/d2.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Lemon Meringue Pie</h3>
             <p>Frozen pie crust, meringue, lemon&nbsp; </p>
@@ -213,7 +213,7 @@
           </div>
         </div>  
       <div class="menu-item py-lg-4 ">
-          <img src="/public/d3.jpg" alt="">
+          <img src="./images/d3.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Sea Bass Ceviche
             </h3>
@@ -227,7 +227,7 @@
           </div>
         </div>
       <div class="menu-item">
-          <img src="/public/d4.jpg" alt="">
+          <img src="./images/d4.jpg" alt="">
           <div>
             <h3 class="featurette-heading ">Grilled Salmon with Dill Sauce</h3>
             <p>Brown sugar, salmon fillet, Dijon mustard &nbsp; </p>
@@ -288,7 +288,7 @@
       <footer class="pt-4  pt-md-5 border-top bg-dark"class="95%">
             <div class="row col-12">
             <div class="col-12 col-md mx-4 px-0">
-                <img class="mb-2" src="/public/menu1.jpg" alt="" width="20" height="24">
+                <img class="mb-2" src="./images/menu1.jpg" alt="" width="20" height="24">
                 <small class="d-block mb-3 text-light">© 2023 Chawaa</small>
             </div>
             <div class="col-4 col-md px-2">
