--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="/public/menu1.jpg" >
+    <link rel="icon" type="image/x-icon" href="./imagesc/menu1.jpg" >
     <title>Contact Us</title>
   <body>
     <nav aria-label="breadcrumb ">
@@ -17,7 +17,7 @@
             Chawaa
           </h5>
         </li>
-        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+        <li class="breadcrumb-item"><a href="/chawaGujrat/">Home</a></li>
         <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
       </ol>
     </nav>
