--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
         </div> 
 
           <!-- ************* View All Dishes *******************  -->
-        <div class="container-fluid ml-3 mb-4 mt-4 d-flex justify-content-center " style="height: 4.5rem;">
-          <form class="form-inline dishBtnForm my-2 my-lg-0 h-100">
-            <button class="btn btn-lg  dishBtn my-2 my-sm-0 h-100" type="submit">View All </button>
+        <div class="container-fluid ml-3 mb-4 mt-4 d-flex justify-content-center " style="height: 5rem;">
+          <form class="form-inline dishBtnForm my-2 my-lg-0 h-100" style="width:11rem; height: 4rem">
+            <a href="Menu.html" class="my-2 my-sm-0 w-100 h-100 viewAll" style="text-decoration: none;" >View All</a>
         </form> 
         </div>
 
