--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             </div> 
           </div>
           <div class="container col-6 col-md-8 col-lg-5 d-flex justify-content-center align-items-center">
-            <img src="/public/rest7.jpg" class="w-75 h-75 mx-auto  px-auto" alt="" srcset="">
+            <img src="./images/rest7.jpg" class="w-75 h-75 mx-auto  px-auto" alt="" srcset="">
            </div>
         </div>
         <!-- dessert -->
