--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
            </div>  
                 <div class="col-4 d-flex justify-content-center align-items-center belowNavContent">
                   <img src="./images/icons8-time-machine-48.png" alt="" style="border-radius: 7px;"  srcset="">
-                <div class="content ml-3">
-                  <h2 class="featurette-heading belowNavWords " style="margin-bottom: 0px;">Opening Hours </h2>
+                <div class="content ml-3 belowNavWords">
+                  <h2 class="featurette-heading  " style="margin-bottom: 0px;">Opening Hours </h2>
               <p class="lead ">Mon To Fri 9:00 AM - 9:00 PM </p>
             </div>
                </div>
