--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <meta name="description" content="A brief descriptioin">
     <meta name="author" content="Muhammad Ahmed Raza">
     <meta name="keywords" content="HTML5,CSS,SASS,Bootstrap,JavaScript">
-    
+<!--         <meta property="og:image" content="./images/resturant2.jpj">  -->
+
      <meta property="og:title" content="Chawa Resturant Gujrat"> <!--  REQUIRED -->
-    <meta property="og:image" content="./images/resturant2.jpj">     <!--  REQUIRED -->
+    <meta property="og:image" content="https://hiiahmed.github.io/chawaGujrat/images/resturant2.jpg" />
+    <meta property="og:image:url" content="https://hiiahmed.github.io/chawaGujrat/images/resturant2.jpg" /> 
+    <meta property="og:image:type" content="image/jpeg" /> 
+    <meta property="og:image:width" content="400" /> 
+    <meta property="og:image:height" content="300" /><!--  REQUIRED -->
     <meta property="og:type" content=" website">      <!--  REQUIRED  -->
     <meta property="og:url" content=" https://hiiahmed.github.io/chawaGujrat/"> <!-- REQUIRED -->
      <meta property="og:description" content=" chawa gujrat">
