--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
             <p style="color: whitesmoke;">We love to hear from customers, so please leave a comment or say hello in an email.</p>
            </div>
             <br></br>
-         <div class="container-fluid d-flex justify-content-center px-1">
-            <div class="container mt-3 mx-1 mx-md-3" style="width:28%; background-color: #eab521; border-radius: 14px;">
+         <div class="container-fluid d-flex justify-content-center">
+            <div class="container mt-3 mx-3" style="width:28%; background-color: #eab521; border-radius: 14px;">
                 <div class="row p-md-3">
                   <img src="./images/main2.jpg"  alt="" class="col-8 mt-2 mt-md-4 ml-2 col-md-4">
                 <div class="author mt-md-5 mt-3 ml-1 col-8 mx-2 mx-md-0 pr-1 col-md-7 pl-md-0">
@@ -293,7 +293,7 @@
                   <p>I have visited the restaurant , food is absolutely amazing & attention to detail is in league of its own. </p>
                 </div>
               </div>
-           <div class="container mt-3 mx-1 mx-md-3" style="width:28%; background-color: #eab521; border-radius: 14px;">
+           <div class="container mt-3 mx-3" style="width:28%; background-color: #eab521; border-radius: 14px;">
               <div class="row p-md-3">
                 <img src="./images/main2.jpg"  alt=""  class="col-8 mt-2 mt-md-4 ml-2 col-md-4">
               <div class="author mt-md-5 mt-3 ml-1 col-8 mx-2 mx-md-0 pr-1 col-md-7 pl-md-0">
@@ -307,7 +307,7 @@
                 <p>Perfectly known for its fabulous taste and food.They give best fried chicken and yummy burgers  .</p>
               </div>
             </div>
-            <div class="container mt-3 mx-1 mx-md-3" style="width:28%; background-color: #eab521; border-radius: 14px;">
+            <div class="container mt-3 mx-3" style="width:28%; background-color: #eab521; border-radius: 14px;">
                 <div class="row p-md-3">
                   <img src="./images/main2.jpg"  alt="" class="col-8 mt-2 mt-md-4 ml-2 col-md-4">
                 <div class="author mt-md-5 mt-3 ml-1 col-8 mx-2 mx-md-0 pr-1 col-md-7 pl-md-0">
