--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <div class="row p-md-3">
                   <img src="./images/main2.jpg"  alt="" class="col-8 mt-2 mt-md-4 ml-2 col-md-4">
                 <div class="author mt-md-5 mt-3 ml-1 col-8 mx-2 mx-md-0 pr-1 col-md-7 pl-md-0">
-                  <h2 class="featurette-heading "style="font-weight:600">Talha Fayyaz</h2>
+                  <h2 class="featurette-heading "style="font-weight:600">Ch Abdul Rehman</h2>
                   <h4 class="">Gujrat</h4>
                 </div>
                 </div>
