--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <header>
-      <a class="navbar-brand" href="#">Chawaa</a>
+      <a class="navbar-brand" href="#">One Stop</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     </header>
       
