--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
          <div class="container-fluid d-flex justify-content-center">
             <div class="container mt-3 mx-3" style="width:28%; background-color: #eab521; border-radius: 14px;">
                 <div class="row p-md-3">
-                  <img src="./images/main2.jpg"  alt="" class="col-8 mt-2 mt-md-4 ml-2 col-md-4">
+                  <img src="./images/WIN_20230813_10_56_06_Pro.jpg"  alt="" class="col-8 mt-2 mt-md-4 ml-2 col-md-4">
                 <div class="author mt-md-5 mt-3 ml-1 col-8 mx-2 mx-md-0 pr-1 col-md-7 pl-md-0">
                   <h2 class="featurette-heading "style="font-weight:600">Ch Abdul Rehman</h2>
                   <h4 class="">Gujrat</h4>
